<resources>
    <string name="app_name">dam-seminar-005</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="new_expense_date_hint">Date dd/MM/yyyy</string>
    <string name="new_expense_amount_hint">Amount</string>
    <string name="new_expense_description_hint">Description</string>
    <string name="new_expense_save">Save</string>
    <string name="new_expense_category">Category</string>
    <string name="invalid_date_field_error">Invalid date. Accepted format is dd/MM/yyyy</string>
    <string name="invalid_amount_field_error">Invalid amount value</string>
    <string name="new_expense_added">A new expense is received</string>

    <string name="tv_about_version">V 1.0</string>
    <string name="tv_about_team">Grupa 1088</string>
    <string name="tv_about_year">2020-2021</string>
    <string name="tv_about_application_title">Seminar 5</string>
    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="old_menu_new_expense">New expense</string>
    <string name="rb_option_1">Popescu Daniel</string>
    <string name="rb_option_2">Ionescu Florentina</string>
    <string name="rb_option_3">Dumitru Ion</string>
    <string name="rb_option_4">Cocis Ioana</string>
    <string name="old_menu_select_account">Select account</string>
    <string name="tv_main_show_message">Bun venit, %1$s</string>
    <string name="account_save">Save</string>

    <string-array name="new_expense_categories_values">
        <item>Food</item>
        <item>Clothes</item>
        <item>Presents</item>
    </string-array>
</resources>