<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <RadioGroup
        android:id="@+id/rg_select_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:padding="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_option_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_option_1"/>

        <RadioButton
            android:checked="true"
            android:id="@+id/rb_option_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_option_2"/>

        <RadioButton
            android:id="@+id/rb_option_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_option_3"/>

        <RadioButton
            android:id="@+id/rb_option_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_option_4"/>
    </RadioGroup>

    <Button
        android:id="@+id/account_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_select_account" />

</androidx.constraintlayout.widget.ConstraintLayout>